# lattice-base

./: .gitignore  README.md  lattice.mmd  project.yaml  pyproject.toml  quickstart  quickstart.ps1
docs/: schema.md  spec.md
examples/: example-lattice.yaml
scripts/: bootstrap_unix.sh  bootstrap_windows.ps1
src/lattice_base/: __init__.py  cli.py  graph.py  io.py  model.py
src/lattice_base/apps/: __init__.py  aggregate.py  base.py
src/lattice_base/integrations/: __init__.py  notion.py
src/lattice_base/lattice/: __init__.py  cli.py  io.py  model.py  panel_app.py
src/lattice_base/project/: __init__.py  core.py
src/lattice_base/testing/: __init__.py
src/lattice_base/ui/: state.py
tests/: test_cli_init.py  test_cli_mermaid.py  test_cli_next.py  test_cli_test.py  test_cli_validate.py  test_docs.py  test_graph.py  test_io.py  test_model.py  test_quickstart_scripts.py  test_validate.py
